--- a/extension/app/popup/navigation.css
+++ b/extension/app/popup/navigation.css
@@ -51,7 +51,7 @@
   position: absolute;
   left: calc(100% + 7px);
   top: 50%;
-  z-index: 5;
+  z-index: 9999;
   transform: translateY(-50%);
   padding: 4px 7px;
   border-radius: 5px;
